--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
-                app:layout_constraintVertical_bias="0.0"/>
+                app:layout_constraintVertical_bias="0.0" android:backgroundTint="@color/colorAccent"/>
 
         <EditText
                 android:id="@+id/editText"
@@ -75,7 +75,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editText"
-                app:layout_constraintVertical_bias="0.0"/>
+                app:layout_constraintVertical_bias="0.0" android:backgroundTint="@color/colorAccent"/>
 
         <TextView
                 android:layout_width="wrap_content"
@@ -101,6 +101,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:textColor="@color/colorAccent"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:text="Select random movie for EditText"
                 android:onClick="@{() -> viewmodel.onSelectRandomEditTextFruit()}"
